--- a/SCSS/media-query/_desktop.scss
+++ b/SCSS/media-query/_desktop.scss
@@ -61,6 +61,11 @@
                 }
             }
 
+            div.texto-services:hover{
+                    transform: scale(1, 1.2);
+            }
+            
+
         }
     }
 
